[gd_scene load_steps=5 format=2]

[ext_resource path="res://Entities/ConveyorBelt/ConveyorBelt.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Miscellaneous/Null.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 24, 4 )

[node name="ConveyorBelt" type="StaticBody2D"]
constant_linear_velocity = Vector2( 0, -1 )
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 16, 0 )
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartSprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="LoopSprite" type="Sprite" parent="."]
position = Vector2( 16, 0 )
texture = ExtResource( 2 )

[node name="EndSprite" type="Sprite" parent="."]
position = Vector2( 32, 0 )
texture = ExtResource( 2 )

[node name="TravelArea2D" type="Area2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="TravelArea2D"]
position = Vector2( 16, -10 )
shape = SubResource( 2 )
